# wali_pi5

./: .gitignore  README.md
c3ws/: attach_to_docker_r2hdp.sh  clean.sh  kill_docker_r2hdp.sh  rebuild.sh  run_docker_r2hdp.sh  ss.sh  ss0.sh  ss01.sh  ss1.sh  ss_active.sh  ss_passive.sh  start_docker_r2hdp_service.sh  start_wali.sh  term_to_r2hdp.sh
c3ws/cmds/: apt_search_ROS_Humble_pkgs.sh  call_say_svc.sh  clear_rtabmap_db.sh  cmd_vel_stop.sh  del_c3sim.sh  dock.sh  docker_log.sh  dr_kitchen_from_undocked.sh  dr_undocked_from_kitchen.sh  dr_undocked_to_front_door_and_back.sh  dr_undocked_to_kitchen_and_back.sh  echo_battery_state.sh  echo_dock_status.sh  echo_hazard_detection.sh  echo_ir_intensity.sh  echo_ir_opcode.ah  echo_mobilenet_detections.sh  echo_oak_nn_spatial_detections.sh  echo_odom.sh  echo_top_mobilenet_detection.sh  echo_transforms.sh  echo_yolo4_detections.sh  find_transforms.sh  follow_wall.sh  go_home.sh  goto_0-1-0.sh  goto_0.3-0-0.sh  goto_0.8-0-0.sh  goto_1-0-0.sh  kill_all_wali.sh  kill_joint_and_robot_state_publishers.sh  launch_camera.sh  launch_create3_async_slam.sh  launch_create3_mapping_floorplan.sh  launch_create3_nav2.sh  launch_ignition.sh  launch_joint_and_robot_state_publishers.sh  launch_map_server.sh  launch_republisher.sh  launch_rgb_stereo.sh  (+46 more)
c3ws/install/: local_setup.sh  setup.sh
c3ws/log/: latest_build
c3ws/maps/: xyzzy.map.pgm  xyzzy.map.yaml
c3ws/params/: camera.yaml  mapper_params_online_async.yaml  my_mapper_params_online_async.yaml  my_mapper_params_online_sync.yaml  no_imu.yaml  oakd_lite.yaml  repub_params.yaml
c3ws/src/create3_navigation/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
c3ws/src/create3_navigation/config/: localization.create3.yaml  nav2.create3.yaml  nav2.yaml  slam.create3.yaml  slam.gpg.yaml  slam.yaml
c3ws/src/create3_navigation/create3_navigation/: create3_ir_scan.py  create3_navigator.py
c3ws/src/create3_navigation/launch/: localization.launch.py  map_server.launch.py  nav2.launch.py  slam.launch.py
c3ws/src/create3_navigation/maps/: README.md  floorplan.map.pgm  floorplan.map.yaml
c3ws/src/wali/: package.xml  setup.cfg  setup.py
c3ws/src/wali/wali/: battery_sub.py  c3interface.py  ir2scan.py  ir2scan1.py  ir_dist.py  odometer.py  say_node.py  sub_ir.py  sub_tf.py  vel_pwr_test.py  wali_node.py  wallfollower.py  wander.py
c3ws/worlds/: 3x4m-short-wall-area-with-box-and-open-doorway.wld.sdf  playground.wld.sdf
configs/: README.md  add_to_boot_firmware_config_dot_txt.txt  add_usb0_br0_bridge.sh  append_to_boot_firmware_config.txt  append_to_tilda_dot_bashrc.sh  crontab-e  etc_chrony.chrony.conf  etc_dnsmasq_d.br0  etc_network_interfaces_dot_d.g_ether  etc_systemd_system.ip_feedback.service  fastdds-passive-unicast.xml  install_ip_feedback_service.sh  lib_systemd_system.usbgadget.service  super_client_configuration_file0.xml  super_client_configuration_file01.xml  super_client_configuration_file1.xml  usb0.README.md  usb0.README.md.yuck  usr_local_sbin.usb-gadget.sh
configs/create3/: README.md  application_configuration.orig.txt  (+1 more)
dai_ws/: launch_pointcloud.sh  launch_rtabmap.sh  no_imu.yaml  rebuild.sh
docs/: frames.txt
oak_models/: README.md
plib/: cleanlifelog.py  lifeLog.py  loglife.py
utils/: du_docker.sh  find_core_files.sh  ip_feedback.sh  logMaintenance.py  monitor.sh  nohup_loglife.sh  odometerTotal.sh  piper.sh  topDiskUsage.sh  totallife.sh
(+92 files in other folders)
