<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wali</name>
  <version>0.0.1</version>
  <description>WaLI: Wall follower Looking for Intelligence</description>
  <maintainer email="slowrunner@users.noreply.github.com">slowrunner</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>irobot_create_msgs</depend>
  <depend>wali_interfaces</depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
